--- a/src/main/webapp/member/fixed-member-sidebar.html
+++ b/src/main/webapp/member/fixed-member-sidebar.html
@@ -225,9 +225,22 @@
 		 })
 		 .then(body => {
 			 const { successful, errMsg } = body;
-		 	 alert(successful ? '圖片上傳成功囉' : errMsg);
+// 		 	 alert(successful ? '圖片上傳成功囉' : errMsg);
 		 	 // to do list 按下上傳照片後要可以馬上更換新的照片
 			// 	console.log(base64Image);
+			if (successful) {
+			        Swal.fire({
+			            icon: "success",
+			            title: "上傳成功",
+			            text: "成功換照片囉！",
+			        });
+			    } else {
+			        Swal.fire({
+			            icon: "error",
+			            title: "Oh...糟糕",
+			            text: errMsg || "照片上傳失敗了...QQ",
+			        });
+			    }
 		 	photo_base64.src = 'data:image/png;base64,' + base64Image;
 		 })
     }
