update member_heard img show is OK

--- a/src/main/webapp/member/fixed-member-navbar.html
+++ b/src/main/webapp/member/fixed-member-navbar.html
@@ -59,7 +59,7 @@
             <div class="btn-group account-drop">
                 <button type="button" class="btn btn-order-by-filt dropdown-toggle" id="showbutton"
                     data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    <img src="https://placehold.co/500x500" class="avater-img" alt="">您好！<span id="member_name"> </span>
+                    <img id="member_navbar_photo_base64" src="https://placehold.co/500x500" class="avater-img" alt="">您好！<span id="member_name"> </span>
                 </button>
                 <div class="dropdown-menu pull-right animated flipInX" id="showing">
                     <a href="./member-details.html"><i class="fa-solid fa-gauge"></i>個人資料</a>
@@ -69,8 +69,10 @@
         </li>
     </ul>
 </div>
+<input type="hidden" id="img_member_navbar_id" value="">
 
 <script>
+	const member_navbar_photo_base64 = document.getElementById('member_navbar_photo_base64');
 	const username = document.querySelector('#member_name');
 	const member_logo_href = document.querySelector('#member_logo_href');
 	const member_index_href = document.querySelector('#member_index_href');
@@ -79,7 +81,14 @@
 	.then(resp => resp.json())
 	.then(member => {
 		username.innerText = member.member_name;
-		
+		img_member_navbar_id.value = member.member_id;
+		if (member.photo_base64 == null) {
+			member_navbar_photo_base64.src = 'https://placehold.co/500x500';
+			console.log("照片是空的");
+			} else {
+		member_navbar_photo_base64.src = 'data:image/png;base64,' + member.photo_base64;	
+		console.log("77777有照片囉");				
+				}
 	});
 
 
