--- a/src/main/webapp/member/header.html
+++ b/src/main/webapp/member/header.html
@@ -47,8 +47,8 @@
 			<div class="nav-menus-wrapper" style="transition-property: none;">
 				<ul class="nav-menu">
 
-					<li class="active"><a id="index_href" href="../chilltribe.html">首頁<span
-							class="submenu-indicator"></span></a></li>
+					<li class="active"><a id="index_href"
+						href="../chilltribe.html">首頁<span class="submenu-indicator"></span></a></li>
 
 					<li><a href="JavaScript:Void(0);">活動列表<span
 							class="submenu-indicator"></span></a></li>
@@ -96,8 +96,9 @@
 								class="btn btn-order-by-filt dropdown-toggle" id="showbutton"
 								data-bs-toggle="dropdown" aria-haspopup="true"
 								aria-expanded="false">
-								<img src="https://placehold.co/500x500" class="avater-img"
-									alt="">您好！<span id="member_name"> </span>
+								<img id="member_header_photo_base64"
+									src="https://placehold.co/500x500" class="avater-img" alt="">您好！<span
+									id="member_name"> </span>
 							</button>
 							<div class="dropdown-menu pull-right animated flipInX"
 								id="showing">
@@ -200,8 +201,11 @@
 <!-- ============================================================== -->
 <!-- End Wrapper -->
 <!-- ============================================================== -->
+<input type="hidden" id="img_member_header_id" value="">
+
 
 <script>
+			const member_header_photo_base64 = document.getElementById('member_header_photo_base64');
 			const username = document.querySelector('#member_name');
 			const loginRegisterMenu = document.querySelector('#login-register-menu');
 			const logoutMenu = document.querySelector('#logout-menu');
@@ -214,6 +218,16 @@
 			.then(resp => resp.json())
 			.then(member => {
 				username.innerText = member.member_name;	
+				img_member_header_id.value = member.member_id;
+
+				if (member.photo_base64 == null) {
+					member_header_photo_base64.src = 'https://placehold.co/500x500';
+					console.log("照片是空的");
+					} else {
+					member_header_photo_base64.src = 'data:image/png;base64,' + member.photo_base64;	
+					console.log("77777有照片囉");				
+						}
+				
 				if (member.member_name != null) {
 			        // 顯示登出&隱藏登錄或註冊
 			        username.innerText = member.member_name;
