--- a/src/main/webapp/member/member-details.html
+++ b/src/main/webapp/member/member-details.html
@@ -12,7 +12,8 @@
 <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
 
 <!-- chill-header css -->
-<link href="../Full_Resido/_html/assets/css/chill-header.css" rel="stylesheet">
+<link href="../Full_Resido/_html/assets/css/chill-header.css"
+	rel="stylesheet">
 
 
 <!-- Custom Color Option -->
@@ -87,8 +88,7 @@
 
 										<div class="form-group col-md-6">
 											<label>帳號/Email</label> <input type="email"
-												class="form-control simple" id="email" value=""
-												disabled>
+												class="form-control simple" id="email" value="" disabled>
 										</div>
 
 										<div class="form-group col-md-6">
@@ -96,12 +96,12 @@
 												class="form-control" id="date_of_birth" value="">
 										</div>
 
-<!-- 										<div class="form-group col-md-6"> -->
-<!-- 											<label>身分證字號</label> -->
-<!-- 											<span class="input-required">*</span> -->
-<!-- 											<input type="text" class="form-control simple" id="id_card" -->
-<!-- 												value="" disabled> -->
-<!-- 										</div> -->
+										<!-- 										<div class="form-group col-md-6"> -->
+										<!-- 											<label>身分證字號</label> -->
+										<!-- 											<span class="input-required">*</span> -->
+										<!-- 											<input type="text" class="form-control simple" id="id_card" -->
+										<!-- 												value="" disabled> -->
+										<!-- 										</div> -->
 
 										<div class="form-group col-md-6">
 											<label>性別</label> <select name="gender" id="gender"
@@ -126,7 +126,8 @@
 
 										<div class="form-group col-lg-12 col-md-12"
 											style="display: flex; justify-content: flex-end;">
-											<button class="btn btn-primary rounded px-3" type="button" id="editBtn">儲存變更</button>
+											<button class="btn btn-primary rounded px-3" type="button"
+												id="editBtn">儲存變更</button>
 										</div>
 
 									</div>
@@ -157,7 +158,7 @@
 			class="ti-arrow-up"></i></a>
 
 	</div>
-	
+
 	<input type="hidden" id="member_id" value="">
 	<!-- ============================================================== -->
 	<!-- End Wrapper -->
@@ -172,7 +173,8 @@
 	<script src="../Full_Resido/_html/assets/js/bootstrap.min.js"></script>
 	<script src="../Full_Resido/_html/assets/js/rangeslider.js"></script>
 	<script src="../Full_Resido/_html/assets/js/select2.min.js"></script>
-	<script src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
+	<script
+		src="../Full_Resido/_html/assets/js/jquery.magnific-popup.min.js"></script>
 	<script src="../Full_Resido/_html/assets/js/slick.js"></script>
 	<script src="../Full_Resido/_html/assets/js/slider-bg.js"></script>
 	<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
@@ -211,7 +213,7 @@
 			});
 		});
 	</script>
-	
+
 	<script>
 	
 	const username = document.querySelector('#member_name');
