update edit & img is show

--- a/src/main/webapp/member/member-addresses.html
+++ b/src/main/webapp/member/member-addresses.html
@@ -192,6 +192,7 @@
 	<!-- End Wrapper -->
 	<!-- ============================================================== -->
 	<input type="hidden" id="address_member_id" value="">
+	<input type="hidden" id="member_id" value="">
 
 	<!-- ============================================================== -->
 	<!-- All Jquery -->
