--- a/src/main/webapp/member/member-addresses.html
+++ b/src/main/webapp/member/member-addresses.html
@@ -21,6 +21,8 @@
 <!-- Custom CSS - 不是模板提供的 -->
 <link href="css/front-desk.css" rel="stylesheet">
 
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+
 </head>
 
 <body class="blue-skin">
@@ -109,37 +111,42 @@
 										</td>
 										<td class="action">
 											<div class="action-container">
+<!-- 												<button class="delete"> -->
+<!-- 													<i class="fa-solid fa-trash-can" -->
+<!-- 														style="margin-right: 10px;" id="btn_delete"></i>刪除 -->
+<!-- 												</button> -->
+												<a href="./member-edit-address.html">
 												<button class="delete">
-													<i class="fa-solid fa-trash-can"
-														style="margin-right: 10px;" id="btn_delete"></i>刪除
-												</button>
+												<i class="bi bi-pencil-square" style="margin-right: 10px;" id="btn_address_edit"></i>
+													修改
+												</button></a>
 												<button class="set-default -on">設為預設</button>
 											</div>
 										</td>
 									</tr>
 
 									<!-- Item #2 -->
-									<tr>
-										<td class="property-container">
+<!-- 									<tr> -->
+<!-- 										<td class="property-container"> -->
 
-											<div class="title">
-												<span class="zip-code" id="zip_code_2">郵遞區號</span> <span
-													class="city-district" id="city_district_2">縣市+區</span> <span
-													id="address_2">詳細地址</span> <span
-													class="table-property-price" id="tag_2">標籤</span> <span
-													class="table-property-tag" id="address_default_2">預設</span>
-											</div>
-										</td>
-										<td class="action">
-											<div class="action-container">
-												<button class="delete">
-													<i class="fa-solid fa-trash-can"
-														style="margin-right: 10px;" id="btn_delete"></i>刪除
-												</button>
-												<button class="set-default">設為預設</button>
-											</div>
-										</td>
-									</tr>
+<!-- 											<div class="title"> -->
+<!-- 												<span class="zip-code" id="zip_code_2">郵遞區號</span> <span -->
+<!-- 													class="city-district" id="city_district_2">縣市+區</span> <span -->
+<!-- 													id="address_2">詳細地址</span> <span -->
+<!-- 													class="table-property-price" id="tag_2">標籤</span> <span -->
+<!-- 													class="table-property-tag" id="address_default_2">預設</span> -->
+<!-- 											</div> -->
+<!-- 										</td> -->
+<!-- 										<td class="action"> -->
+<!-- 											<div class="action-container"> -->
+<!-- 												<button class="delete"> -->
+<!-- 													<i class="fa-solid fa-trash-can" -->
+<!-- 														style="margin-right: 10px;" id="btn_delete"></i>刪除 -->
+<!-- 												</button> -->
+<!-- 												<button class="set-default">設為預設</button> -->
+<!-- 											</div> -->
+<!-- 										</td> -->
+<!-- 									</tr> -->
 
 									<!-- Item #3 -->
 <!-- 									<tr> -->
@@ -224,6 +231,8 @@
 	<script src="../Full_Resido/_html/assets/js/lightbox.js"></script>
 	<script src="../Full_Resido/_html/assets/js/imagesloaded.js"></script>
 
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 	<script>
 		// navbar load
 		$("#navigation").load("fixed-member-navbar.html");
@@ -274,20 +283,20 @@
 	const tag_1 = document.getElementById("tag_1");
 	console.log('tag_1：' + tag_1.textContent);
 
-	const zip_code_2 = document.getElementById("zip_code_2");
-	console.log('zip_code_2：' + zip_code_2.textContent);
-	const city_district_2 = document.getElementById("city_district_2");
-	console.log('city_district_2：' + city_district_2.textContent);
-	const address_2 = document.getElementById("address_2");
-	console.log('address_2：' + address_2.textContent);
-	const city_id_2 = document.getElementById("city_id_2");
-	console.log('city_id_2：' + city_id_2.textContent);
-	const district_id_2 = document.getElementById("district_id_2");
-	console.log('district_id_2：' + district_id_2.textContent);
-	const address_default_2 = document.getElementById("address_default_2");
-	console.log('address_default_2：' + address_default_2.textContent);
-	const tag_2 = document.getElementById("tag_2");
-	console.log('tag_2：' + tag_2.textContent);
+// 	const zip_code_2 = document.getElementById("zip_code_2");
+// 	console.log('zip_code_2：' + zip_code_2.textContent);
+// 	const city_district_2 = document.getElementById("city_district_2");
+// 	console.log('city_district_2：' + city_district_2.textContent);
+// 	const address_2 = document.getElementById("address_2");
+// 	console.log('address_2：' + address_2.textContent);
+// 	const city_id_2 = document.getElementById("city_id_2");
+// 	console.log('city_id_2：' + city_id_2.textContent);
+// 	const district_id_2 = document.getElementById("district_id_2");
+// 	console.log('district_id_2：' + district_id_2.textContent);
+// 	const address_default_2 = document.getElementById("address_default_2");
+// 	console.log('address_default_2：' + address_default_2.textContent);
+// 	const tag_2 = document.getElementById("tag_2");
+// 	console.log('tag_2：' + tag_2.textContent);
 
 // 	const zip_code_3 = document.getElementById("zip_code_3");
 // 	console.log('zip_code_3：' + zip_code_3.textContent);
@@ -356,24 +365,24 @@
 				console.log('address_default_1：'+ address_default_1.textContent);
 			}
 // 			debugger;
-			if (i == 1) {
-				console.log(member);
-				member_id.value = member[i].member_id;
-				address_member_id.value = member[i].member_id;
-				zip_code_2.textContent = member[i].zip_code;
-				console.log('zip_code_2：' + zip_code_2.textContent);
-				district_id_2.textContent = member[i].district_id;
-				console.log('district_id_2：'+ district_id_2.textContent);
-				city_id_2.textContent = member[i].city_id;
-				console.log('city_id_2：' + city_id_2.textContent);
-				address_2.textContent = member[i].address;
-				console.log('address_2：' + address_2.textContent);
-				tag_2.textContent = member[i].tag;
-				console.log('tag_2：' + tag_2.textContent);
-				city_district_2.textContent = `${member[i].city_name}${member[i].district_name}`;
-				console.log('city_district_2：' + city_district_2.textContent);
-				console.log('address_default_2：'+ address_default_2.textContent);
-				} 
+// 			if (i == 1) {
+// 				console.log(member);
+// 				member_id.value = member[i].member_id;
+// 				address_member_id.value = member[i].member_id;
+// 				zip_code_2.textContent = member[i].zip_code;
+// 				console.log('zip_code_2：' + zip_code_2.textContent);
+// 				district_id_2.textContent = member[i].district_id;
+// 				console.log('district_id_2：'+ district_id_2.textContent);
+// 				city_id_2.textContent = member[i].city_id;
+// 				console.log('city_id_2：' + city_id_2.textContent);
+// 				address_2.textContent = member[i].address;
+// 				console.log('address_2：' + address_2.textContent);
+// 				tag_2.textContent = member[i].tag;
+// 				console.log('tag_2：' + tag_2.textContent);
+// 				city_district_2.textContent = `${member[i].city_name}${member[i].district_name}`;
+// 				console.log('city_district_2：' + city_district_2.textContent);
+// 				console.log('address_default_2：'+ address_default_2.textContent);
+// 				} 
 
 // 			debugger;
 // 			if (i == 2) {
@@ -403,6 +412,11 @@
 	$("#add_addresses").on("click", function() {
 	console.log("新增地址按鈕觸發");
 		});
+
+	$("#btn_address_edit").on("click", function() {
+		console.log("修改地址按鈕觸發");
+			});
+	
 	
 	</script>
 
