--- a/src/main/webapp/member/member-edit-address.html
+++ b/src/main/webapp/member/member-edit-address.html
@@ -6,7 +6,7 @@
 <meta name="viewport"
 	content="width=device-width, initial-scale=1, maximum-scale=1">
 
-<title>一般會員新增地址</title>
+<title>一般會員修改地址</title>
 
 <!-- Custom CSS -->
 <link href="../Full_Resido/_html/assets/css/styles.css" rel="stylesheet">
@@ -78,7 +78,7 @@
 
 							<!-- Location -->
 							<div class="form-submit">
-								<h3>新增地址</h3>
+								<h3>修改地址</h3>
 								<div class="submit-section">
 									<div class="row">
 
@@ -220,6 +220,36 @@
 		const address = document.getElementById("address");
 		const tag = document.getElementById("tag");
 
+
+		fetch('findaddressall')
+		.then(resp => resp.json())
+		.then(member => {
+
+			debugger;
+			for (i = 0; i < member.length; i++) {
+				if (i == 0) {
+					console.log(member);
+					member_id.value = member[i].member_id;
+					address_member_id.value = member[i].member_id;
+					city.value = member[i].city_id;
+// 					console.log('zip_code_1：' + zip_code_1.textContent);
+					districts.value = member[i].district_id;
+// 					console.log('district_id_1：'+ district_id_1.textContent);
+					zipcode.value = member[i].zip_code;
+// 					console.log('city_id_1：' + city_id_1.textContent);
+					address.textContent = member[i].address;
+// 					console.log('address_1：' + address_1.textContent);
+					tag.textContent = member[i].tag;
+// 					console.log('tag_1：' + tag_1.textContent);
+// 					city_district_1.textContent = `${member[i].city_name}${member[i].district_name}`;
+// 					console.log('city_district_1：' + city_district_1.textContent);
+// 					console.log('address_default_1：'+ address_default_1.textContent);
+				}
+		
+			} 	
+			});
+
+		
 		document.querySelector('button#btn_upaddress').addEventListener('click', () => {
 			console.log("送出按鈕觸發");
 			event.preventDefault();
@@ -234,18 +264,15 @@
 
 
 
-			fetch('memberaddress', {
+			fetch('memberaddressedit', {
 				method: 'POST',
 				headers: {
 					'Content-Type': 'application/json'
 				},
 				body: JSON.stringify({
 					member_id: member_id.value,
-// 					zipcode: zip_code.value,
 					zip_code: zipcode.value,
-// 					city: city_id.value,
 					city_id: city.value,
-// 					districts: district_id.value,
 					district_id: districts.value,
 					address: address.value,
 					tag: tag.value,
@@ -261,7 +288,7 @@
 					        Swal.fire({
 					            icon: "success",
 					            title: "成功",
-					            text: "恭喜您，新增地址成功囉！",
+					            text: "恭喜您，修改地址成功囉！",
 					        });
 					    } else {
 					        Swal.fire({
