--- a/src/main/webapp/supplier/apply_activity.html
+++ b/src/main/webapp/supplier/apply_activity.html
@@ -504,7 +504,7 @@
     $.each(addrData, (i, item) => {
       // console.log(item);
       if(item.city_id == $(this).val()){
-        // console.log(item.area)
+        console.log(item.area)
         area_init(item.area);
       }
     })
