--- a/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
+++ b/src/main/webapp/WEB-INF/member/fixed-member-navbar.html
@@ -70,23 +70,27 @@
     </ul>
 </div>
 <input type="hidden" id="img_member_navbar_id" value="">
+<input type="hidden" id="member_id" value="">
 
 <script>
 	const member_navbar_photo_base64 = document.getElementById('member_navbar_photo_base64');
 	const username = document.querySelector('#member_name');
 	const member_logo_href = document.querySelector('#member_logo_href');
 	const member_index_href = document.querySelector('#member_index_href');
+	const memberid = sessionStorage.getItem('memberid');
 
-	fetch('find')
+// 	fetch('find')
+fetch(`find/${memberid}`)
+// fetch(`find/${img_member_navbar_id.value}`)
 	.then(resp => resp.json())
 	.then(member => {
-		username.innerText = member.member_name;
-		img_member_navbar_id.value = member.member_id;
-		if (member.photo_base64 == null) {
+		username.innerText = member.membername;
+		img_member_navbar_id.value = member.memberid;
+		if (member.photobase64 == null) {
 			member_navbar_photo_base64.src = 'https://placehold.co/500x500';
 			console.log("照片是空的");
 			} else {
-		member_navbar_photo_base64.src = 'data:image/png;base64,' + member.photo_base64;	
+		member_navbar_photo_base64.src = 'data:image/png;base64,' + member.photobase64;	
 		console.log("77777有照片囉");				
 				}
 	});
