--- a/src/main/webapp/WEB-INF/member/header.html
+++ b/src/main/webapp/WEB-INF/member/header.html
@@ -190,6 +190,7 @@
 						</div>
 					</div>
 				</div>
+				</div>
 			</div> -->
 <!-- End Modal -->
 
@@ -197,40 +198,49 @@
 	class="ti-arrow-up"></i></a>
 
 
-</div>
+
 <!-- ============================================================== -->
 <!-- End Wrapper -->
 <!-- ============================================================== -->
 <input type="hidden" id="img_member_header_id" value="">
+<input type="hidden" id="member_id" value="">
 
 
 <script>
 			const member_header_photo_base64 = document.getElementById('member_header_photo_base64');
-			const username = document.querySelector('#member_name');
+			const membername = document.querySelector('#member_name');
 			const loginRegisterMenu = document.querySelector('#login-register-menu');
 			const logoutMenu = document.querySelector('#logout-menu');
 			const logo_href = document.querySelector('#logo_href');
 			const index_href = document.querySelector('#index_href');
+			const img_member_header_id = document.querySelector('#img_member_header_id');
+// 			const memberid = document.querySelector('#memberid');
+			const memberid = sessionStorage.getItem('memberid');
 			
 			
 			// to do list ...要判斷如果不是在member路徑底下(首頁)，如果不是要用別的
-			fetch('/chill-tribe/member/find')
+// 			fetch('/chill-tribe/member/find/') 
+// 			debugger;
+// 			fetch(`find/${img_member_header_id.value}`)
+// 			fetch(`/chill-tribe/member/find/${img_member_header_id}`)
+			fetch(`find/${memberid}`)
 			.then(resp => resp.json())
 			.then(member => {
-				username.innerText = member.member_name;	
-				img_member_header_id.value = member.member_id;
+				membername.innerText = member.membername;	
+				img_member_header_id.value = member.memberid;
+// 				memberid = member.memberid;
 
-				if (member.photo_base64 == null) {
+				if (member.photobase64 == null) {
 					member_header_photo_base64.src = 'https://placehold.co/500x500';
 					console.log("照片是空的");
 					} else {
-					member_header_photo_base64.src = 'data:image/png;base64,' + member.photo_base64;	
+					member_header_photo_base64.src = 'data:image/png;base64,' + member.photobase64;	
 					console.log("77777有照片囉");				
 						}
 				
-				if (member.member_name != null) {
+				if (member.membername != null) {
 			        // 顯示登出&隱藏登錄或註冊
-			        username.innerText = member.member_name;
+			        membername.innerText = member.membername;
 			        loginRegisterMenu.style.display = 'none';
 			        logoutMenu.style.display = 'block';
 			      }			
@@ -244,5 +254,6 @@
 			 console.log(chilltribeLink);
 			 logo_href.setAttribute('href', chilltribeLink);
 			 index_href.setAttribute('href', chilltribeLink);
+
 			
 		</script>
