add new ac done

--- a/src/main/webapp/WEB-INF/supplier/edit_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/edit_activity.html
@@ -457,6 +457,6 @@
 </script>
 
 <!----- 接收後端的資料 ----->
-<script src="js/update_activity.js"></script>
+<script src="js/edit_activity.js"></script>
 </body>
 </html>
