323232 add one get

--- a/src/main/webapp/WEB-INF/supplier/activityList.html
+++ b/src/main/webapp/WEB-INF/supplier/activityList.html
@@ -416,7 +416,7 @@
           }
         })
         .catch((error) => {
-          console.log("Activity remove failed", error);
+          console.log("取消活動失敗！", error);
         });
       }
     }
