add mf and sc funcs

--- a/src/main/webapp/WEB-INF/supplier/apply_activity.html
+++ b/src/main/webapp/WEB-INF/supplier/apply_activity.html
@@ -273,7 +273,7 @@
               </div>
               <!-- /.card-body -->
               <div class="card-footer d-flex justify-content-end">
-                  <button id="submitBtn" type="button" class="btn btn-primary">下一步</button>
+                  <button id="submitBtn" type="button" class="btn btn-primary">申請</button>
                   <button type="button" class="btn btn-secondary btn-spacing">取消</button>
               </div>
            </form>
