--- a/src/main/webapp/WEB-INF/member/cart.html
+++ b/src/main/webapp/WEB-INF/member/cart.html
@@ -255,8 +255,9 @@
 			});
 		};
 	</script>
+	
 	<!-- 購物車開始 -->
-	<!-- <script>
+	<script>
     let data = {
         activity_name: document.getElementById('activity_name').innerText,
         count_number: parseInt(document.getElementById('count_number').value), 
@@ -289,12 +290,7 @@
         })
         .catch(error => console.error('Error:', error));
     });
-
-
-   
-	
-    
-	</script> -->
+	</script>
 	<!-- 購物車結束 -->
 </body>
 
