--- a/src/main/webapp/WEB-INF/member/favorite.html
+++ b/src/main/webapp/WEB-INF/member/favorite.html
@@ -94,7 +94,7 @@
                     <td class="property-container">
                       <img src="https://placehold.co/1200x800" alt="">
                       <div class="title">
-                        <h4><a href="#">Serene Uptown</a></h4>
+                        <h4 id="activity_name"><a href="#">Serene Uptown</a></h4>
                         <span>6 Bishop Ave. Perkasie, PA </span>
                         <span class="table-property-price">$900 / monthly</span>
                       </div>
@@ -191,6 +191,22 @@
 
 	<script src="../_html/assets/js/dropzone.js"></script>
 	<!-- New Js -->
+
+	<script>
+		findAllMyFavorites();
+		
+		function findAllMyFavorites() {
+			fetch('/chill-tribe/myfavorites')
+				.then(response => response.json())
+				.then(data => {
+					console.log("從 後端 獲取的數據:", data);
+					data.forEach((product, i) => {
+						document.getElementById("activity_name").innerHTML = product.activity.activityName || "暫無"
+					}
+				)
+			});
+		};
+	</script>
 
 </body>
 
