--- a/src/main/webapp/WEB-INF/member/favorite.html
+++ b/src/main/webapp/WEB-INF/member/favorite.html
@@ -155,6 +155,7 @@
 
 	<script>
 		// navbar load
+		// test
 		$("#navigation").load("fixed-member-navbar.html");
 		$("#page-title").load("fixed-member-page-title.html");
 		$("#narrow-view").load("fixed-member-narrow-view.html");
