--- a/src/main/webapp/WEB-INF/member/cart.html
+++ b/src/main/webapp/WEB-INF/member/cart.html
@@ -88,9 +88,6 @@
 									</div>
 
 									<div class="block-body">
-										<div class="text-start py-3 px-4">
-											<button class="btn btn-secondary rounded px-5" type="button">清空購物車</button>
-										</div>
 										<div class="p-3">
 											<div class="table-responsive">
 												<table
@@ -105,7 +102,7 @@
 														</tr>
 													</thead>
 													<tbody>
-														<tr>
+														 <tr>
 															<td>
 																<div></div>
 															</td>
@@ -129,7 +126,7 @@
 																	<i class="fa-solid fa-trash fs-sm"></i>
 																</button>
 															</td>
-														</tr>
+														</tr> 
 													</tbody>
 												</table>
 											</div>
@@ -241,19 +238,132 @@
 	<!-- <script src="../_html/assets/js/dropzone.js"></script> -->
 	<!-- New Js -->
 	<script>
-		findAllProducts();
-		
 		function findAllProducts() {
-			fetch('/chill-tribe/cart')
-				.then(response => response.json())
-				.then(data => {
-					console.log("從 後端 獲取的數據:", data);
-					data.forEach((product, i) => {
-						document.getElementById("activity_name").innerHTML = product.activity.activityName || "暫無"
+
+    fetch('/chill-tribe/cart')
+       .then(response => response.json())
+        .then(data => {
+					console.log("從後端獲取的數據:", data);
+
+					let tbody = document.querySelector("table tbody");
+					let toTalPriceEl = document.getElementById("total_price");
+					let totalPrice = 0;
+          tbody.innerHTML = "";
+					
+					if (data.length === 0) {
+						let tr = document.createElement("tr");
+						tr.innerHTML = `
+							<td colspan="5" style="text-align: center; color: gray;">
+								目前還沒有商品！
+							</td>
+						`;
+						tbody.appendChild(tr);
+						totalPrice = 0;
+					} else {
+						// 找到 tbody
+						let tbody = document.querySelector("table tbody");
+						tbody.innerHTML = "";
+
+						// 迭代數據，插入表格
+						data.forEach(product => {
+							let activity = product.activity;
+							let imageSrc = activity.activityImages.length > 0 ? `${activity.activityImages[0].imageBase64}` : 'placeholder.jpg';
+							let quantity = parseInt(product.quantity);
+							let unitPrice = activity.unitPrice;
+							let subtotal = unitPrice * quantity;
+							totalPrice += subtotal;
+
+							let tr = document.createElement("tr");
+
+							// 設置 data-id，方便查找對應商品
+							tr.setAttribute("product-id", product.shoppingCartItemId);
+
+							tr.innerHTML = `
+								<td>
+									<div>
+										<img src="${imageSrc}" style="width: 80px; height: 80px; object-fit: cover;">
+									</div>
+								</td>
+								<td class="fw-bold text-truncate" style="max-width: 60px;">${activity.activityName}</td>
+								<td style="max-width: 120px;">
+									<div class="quantity-control d-flex justify-content-center align-items-center">
+										<input type="number" class="form-control text-center mx-2" 
+											quantity-input" value="${quantity}" min="1" max="10" data-price="${unitPrice}" />
+									</div>
+								</td>
+								<td>NT$ ${activity.unitPrice}</td>
+								<td>
+									<button class="btn btn-sm deleteBtn">
+										<i class="fa-solid fa-trash fs-sm"></i>
+									</button>
+								</td>
+							`;
+
+							tbody.appendChild(tr);
+						});
 					}
-				)
-			});
+					toTalPriceEl.textContent = `NT$ ${totalPrice}`;
+        })
+      .catch(error => console.error("獲取數據時出錯:", error));
 		};
+
+		// 操作按鈕
+
+		document.addEventListener("click", function (event) {
+	
+		if (event.target.closest(".deleteBtn")) {
+			event.preventDefault();
+	
+			const userConfirmed = window.confirm("確定要刪除此商品嗎？");
+	
+			if (userConfirmed) {
+				// 找到對應的商品 ID
+				let tr = event.target.closest("tr");
+        let shoppingCartItemId = tr.getAttribute("product-id");
+
+				console.log("要刪除的商品 ID:", shoppingCartItemId);
+				const requestData = {shoppingCartItemId: shoppingCartItemId};
+	
+				fetch(`/chill-tribe/cart/${shoppingCartItemId}`, {
+					method: "DELETE",
+					headers: {
+						"Content-Type": "application/json",
+					},
+					body: JSON.stringify(requestData),
+				})
+					.then((response) => {
+						if (response.ok) {
+							alert("商品已刪除！");
+							tr.remove();
+							findAllProducts();
+						} else {
+							alert("商品刪除失敗！");
+						}
+					})
+					.catch((error) => {
+						console.log("取消商品失敗！", error);
+					});
+				};
+			};
+		});
+
+		// 監聽價格變化
+		document.addEventListener("input", function (event) {
+			if (event.target.classList.contains("quantity-input")) {
+				let totalPriceEl = document.getElementById("total_price");
+				let totalPrice = 0;
+
+				document.querySelectorAll(".quantity-input").forEach(input => {
+					let quantity = parseInt(input.value);
+					let unitPrice = parseInt(input.getAttribute("data-price"));
+					totalPrice += quantity * unitPrice;
+				});
+
+					totalPriceEl.textContent = `NT$ ${totalPrice}`;
+				}
+		});
+
+		findAllProducts();
 	</script>
 	
 	<!-- 購物車開始 -->
